<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:id="@+id/replacementFragmentId">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_person_black_24dp">

                        </ImageView>

                        <TextView
                            android:id="@+id/userProfileUserDisplayName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text=""
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:gravity="center_vertical">
                        </TextView>
                        <EditText
                            android:id="@+id/editUserProfileUserDisplayName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text=""
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:gravity="center_vertical"
                            android:visibility="gone">
                        </EditText>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_email_black_24dp">

                        </ImageView>

                        <TextView
                            android:id="@+id/userProfileUserEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text=""
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:maxLines="1"
                            android:gravity="center_vertical">
                        </TextView>
                        <EditText
                            android:id="@+id/editUserProfileUserEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text=""
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:gravity="center_vertical"
                            android:visibility="gone">
                        </EditText>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_accessibility_black_24dp">

                        </ImageView>


                        <TextView
                            android:id="@+id/userProfileUserGender"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text=""
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:gravity="center_vertical">
                        </TextView>
                        <EditText
                            android:id="@+id/editUserProfileUserGender"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text=""
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:gravity="center_vertical"
                            android:visibility="gone">
                        </EditText>

                    </LinearLayout>

                    <view
                        android:id="@+id/userProfileUserCafes"
                        class="androidx.recyclerview.widget.RecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        android:layout_marginTop="20dp" />

                       <Button
                           android:id="@+id/userProfileAddShop"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="10dp"
                           android:text="Add Shop">
                       </Button>

                    <view
                        android:id="@+id/userProfileUserOrders"
                        class="androidx.recyclerview.widget.RecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        android:layout_marginTop="20dp" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editMerchantCafeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_edit_white_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editMerchantCafeDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_done_black_24dp" />

    </RelativeLayout>


</LinearLayout>
